change NN engine - add abstraction as Layers for calculating